✨ 新功能：警员注册申请，管理员登录与授权